--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -561,16 +561,11 @@ edges_by_tx[names(edges_by_tx) %in% "104252"]
 
 The edge-level metadata columns are the following:
 \begin{itemize}
-  \item \Rcode{sgedge\_id}: A global edge id of the form
+  \item \Rcode{sgedge\_id}: A \textit{global edge id} of the form
         \Rcode{gene\_id:from,to}.
   \item \Rcode{from}, \Rcode{to}, \Rcode{ex\_or\_in}, \Rcode{tx\_id}:
         See the columns of the \Rclass{DataFrame} object returned
         by \Rfunction{sgedges}.
-  \item \Rcode{exon\_id}, \Rcode{exon\_name}, \Rcode{exon\_rank},
-        \Rcode{start\_SSid}, \Rcode{end\_SSid}: See the exon-level
-        metadata columns returned by \Rcode{sg[["some\_gene\_id"]]}
-        (or \Rcode{unlist(sg)}). Set to \Rcode{NA} for edges of type
-        intron.
 \end{itemize}
 
 Note that the artificial edges (i.e. edges starting from the root
