--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -2,7 +2,7 @@
 %\VignetteDepends{SplicingGraphs,TxDb.Mmusculus.UCSC.mm9.knownGene,TBX20BamSubset,Rsamtools}
 %\VignetteKeywords{Annotation}
 %\VignettePackage{SplicingGraphs}
-\documentclass[11pt]{article}
+\documentclass{article}
 
 \usepackage{url}
 \usepackage{float}
@@ -34,10 +34,10 @@
 
 \title{Splicing graph analysis of RNA-Seq data}
 
-\author{Martin Morgan\and
-  Marc Carlson\and
+\author{Herv\'e Pag\`es\and
   Daniel Bindreither\and
-  Herv\'e Pag\`es}
+  Marc Carlson\and
+  Martin Morgan}
 
 \date{Last modified: March 2013; Compiled: \today}
 
@@ -46,6 +46,7 @@
 \maketitle
 
 <<settings,echo=FALSE>>=
+options(width=90)
 .precomputed_results <- system.file("doc", "precomputed_results",
                                     package="SplicingGraphs", mustWork=TRUE)
 .loadPrecomputed <- function(objname)
@@ -68,25 +69,26 @@
 
 The \Rpackage{SplicingGraphs} package allows the user to create and
 manipulate splicing graphs \cite{Sammeth:2010} based on annotations
-for a given organism. The annotations must describe a \textit{gene model},
+for a given organism. Annotations must describe a \textit{gene model},
 that is, they need to contain the following information:
 \begin{itemize}
-  \item The exact exon/intron structure (i.e. genomic coordinates)
+  \item The exact exon/intron structure (i.e., genomic coordinates)
         for the known transcripts.
   \item The grouping of transcripts by gene.
 \end{itemize}
 
-The annotations need to be provided as a \Rclass{TranscriptDb} or
+Annotations need to be provided as a \Rclass{TranscriptDb} or
 \Rclass{GRangesList} object, which is how a gene model is typically
 represented in \Bioconductor.
 
-The package defines the \Rclass{SplicingGraphs} container for storing
-the splicing graphs together with the gene model that they are based on.
-Several methods are provided for conveniently access the information
-stored in a \Rclass{SplicingGraphs} object. Most of these methods are
-described in this document.
+The \Rpackage{SplicingGraphs} package defines the
+\Rclass{SplicingGraphs} container for storing the splicing graphs
+together with the gene model that they are based on.  Several methods
+are provided for conveniently access the information stored in a
+\Rclass{SplicingGraphs} object. Most of these methods are described in
+this document.
 
-Additionally the package allows the user to assign RNA-seq reads to
+The package also allows the user to assign RNA-seq reads to
 the edges of a \Rclass{SplicingGraphs} object and to summarize them.
 This requires that the reads have been previously aligned to the exact
 same reference genome that the gene model is based on. RNA-seq data
@@ -124,7 +126,7 @@ covered in this vignette:
 
 Alternative splicing is a frequently observed complex biological 
 process which modifies the primary RNA transcript and leads to 
-transcript variants of genes. Those variants can often be plentiful. 
+transcript variants of genes. Those variants can be plentiful. 
 Especially for large genes it is often difficult to describe their
 structure in a formal, logical, short and convenient way. To capture 
 the full variety of splicing variants of a certain gene in one single 
@@ -135,20 +137,20 @@ the different choices of the splicing machinery.
 \subsection{Definitions and example}
 
 For a comprehensive explanation of the splicing graph theory,
-please refer to \cite{Heber:2002} and \cite{Sammeth:2010}.
+please refer to \cite{Heber:2002, Sammeth:2010}.
 
 A splicing graph is a directed acyclic graph (DAG) where:
 \begin{itemize}
-  \item The vertices (a.k.a. \textit{nodes}) represent the splicing sites
+  \item Vertices (a.k.a. \textit{nodes}) represent the splicing sites
         for a given gene. Splicing sites are ordered by their position from
         5' to 3' and numbered from \Rcode{1} to \Rcode{n}. This number
         is the \textit{Splicing Site id}.
-        Note that splicing graphs are only defined for genes that have all
+        Splicing graphs are only defined for genes that have all
         the exons of all their transcripts on the same chromosome and
         strand. In particular, in its current form, the splicing graph
-        theory cannot describe \textit{trans-plicing} events.
-  \item The edges are the exons and introns between the splicing sites.
-        Their orientation follows the 5' to 3' direction i.e. they go
+        theory cannot describe \textit{trans-splicing} events.
+  \item Edges are the exons and introns between splicing sites.
+        Their orientation follows the 5' to 3' direction, i.e., they go
         from low to high \textit{Splicing Site ids}.
 \end{itemize}
 
@@ -156,10 +158,10 @@ Two artificial nodes that don't correspond to any splicing site
 are added to the graph: the \textit{root} (\Rcode{R}) and the \textit{leaf}
 (\Rcode{L}). Also artificial edges are added so that all the transcripts are
 represented by a path that goes from \Rcode{R} to \Rcode{L}. That way the
-graph is connected. Note that not all paths in the graph are necessarily
+graph is connected. Not all paths in the graph are necessarily
 supported by a transcript.
 
-Figure \ref{img:CIB3} shows the splicing graph representation
+Figure~\ref{img:CIB3} shows the splicing graph representation
 of all known transcript variants of Human gene CIB3 (Entrez ID 117286).
 
 \begin{figure}[!htbp]
@@ -171,7 +173,7 @@ of all known transcript variants of Human gene CIB3 (Entrez ID 117286).
   \caption{Splicing graph representation of the four transcript variants
     of gene CIB3 (Entrez ID 117286).
     Left: transcript representation. Right: splicing graph representation.
-    The orange arrows are edges corresponding to exons.
+    Orange arrows are edges corresponding to exons.
   }
   \label{img:CIB3}
 \end{figure}
@@ -180,27 +182,27 @@ of all known transcript variants of Human gene CIB3 (Entrez ID 117286).
 
 Splicing sites can be of the following types:
 \begin{itemize}
-  \item \textit{acceptor} site (symbol: \Rcode{-});
-  \item \textit{donor} site (symbol: \Rcode{\^});
-  \item \textit{transcription start} site (symbol: \Rcode{[});
-  \item \textit{transcription end} site (symbol: \Rcode{]}).
+  \item \textit{Acceptor} site (symbol: \Rcode{-});
+  \item \textit{Donor} site (symbol: \Rcode{\^});
+  \item \textit{Transcription start} site (symbol: \Rcode{[});
+  \item \textit{Transcription end} site (symbol: \Rcode{]}).
 \end{itemize}
 
-The symbols associated with the individual types of nodes shown in braces 
+The symbols associated with individual types of nodes shown in braces
 above are used for the identification of complete alternative splicing
 events. For more information about gathering the alternative splicing
-events and their associated codes, please refer to \cite{Heber:2002} and
-\cite{Sammeth:2010}.
+events and their associated codes, please refer to \cite{Heber:2002,
+  Sammeth:2010}.
 
-In some cases a given splicing site can be associated with 2 types
-but the combinations of types for such sites is limited.
+In some cases a given splicing site can be associated with 2 types.
+The combinations of types for such sites is limited.
 Only \textit{acceptor} (\Rcode{-}) and \textit{transcription start}
 (\Rcode{[}), or \textit{donor} (\Rcode{\^}) and \textit{transcription end}
 (\Rcode{]}), can occur as a pair of types. Such a dual-type node occurs
 when the start of an exon, which is not the first exon of a transcript,
 falls together with the transcription start site of another transcript
 of the same gene.
-An example of such splicing graph is shown in Figure \ref{img:ZNF813}.
+An example of such a splicing graph is shown in Figure~\ref{img:ZNF813}.
 
 \begin{figure}[!htbp]
   \begin{center}
@@ -224,10 +226,10 @@ of another transcript of the same gene.
 Whether a non-artificial edge represents an exon or an intron is
 determined by the types of its two flanking nodes:
 \begin{itemize}
-  \item \textbf{exon} if going from \textit{acceptor} (\Rcode{-}),
+  \item \textbf{Exon} if going from \textit{acceptor} (\Rcode{-}),
         or (\Rcode{-},\Rcode{[}) dual-type, to \textit{donor} (\Rcode{\^}),
         or (\Rcode{\^},\Rcode{]}) dual-type;
-  \item \textbf{intron} if the otherway around.
+  \item \textbf{Intron} if the otherway around.
 \end{itemize}
 
 \subsection{Uninformative nodes}
@@ -240,7 +242,7 @@ Edges associated with such nodes get sequentially merged with
 the previous ones and result in longer edges capturing adjacent
 exons/introns. The final splicing graph only contains nodes involved in
 alternative splicing. The result of removing uninformative nodes is
-illustrated in Figure \ref{img:CIB3-simplified}.
+illustrated in Figure~\ref{img:CIB3-simplified}.
 
 \begin{figure}[!htbp]
   \begin{center}
@@ -267,9 +269,9 @@ The starting point for computing splicing graphs is a set of annotations
 describing a \textit{gene model} for a given organism. In \Bioconductor,
 a gene model is typically represented as a \Rclass{TranscriptDb}.
 A few prepackaged \Rclass{TranscriptDb} objects are available as
-\Rpackage{TxDb.*} annotation packages in the \Bioconductor package
+\Rpackage{TxDb.*} annotation packages in the \Bioconductor{} package
 repositories. Here the \Rpackage{TxDb.Mmusculus.UCSC.mm9.knownGene}
-package is used. Note that if there is no prepackaged \Rclass{TranscriptDb}
+package is used. If there is no prepackaged \Rclass{TranscriptDb}
 object for the genome/track that the user wants to use, such objects can
 easily be created by using tools from the \Rpackage{GenomicFeatures} 
 package.
@@ -281,7 +283,7 @@ library(TxDb.Mmusculus.UCSC.mm9.knownGene)
 txdb <- TxDb.Mmusculus.UCSC.mm9.knownGene
 @
 
-Creating the splicing graphs for all the genes in the \Rclass{TranscriptDb}
+Creating the splicing graphs for all genes in the \Rclass{TranscriptDb}
 object can take a long time (up to 20 minutes or more). In order to keep
 things running in a reasonable time in this vignette, we restrict the gene
 model to the genes located on chromosome 19. Let's use the
@@ -351,8 +353,8 @@ that returns the lengths of the individual list elements.
 
 At this point you might wonder why \Rfunction{elementLengths} works on
 \Rclass{SplicingGraphs} objects. Does this mean that those objects are
-list-like objects? The answer is yes. The next thing you might wonder
-is what do the list elements look like and how you can access them.
+list-like objects? The answer is yes. 
+What do the list elements look like, and how can you access them?
 This is answered in the next subsection.
 
 \subsection{Basic manipulation of a \Rclass{SplicingGraphs} object}
@@ -379,14 +381,14 @@ The exon-level metadata columns are:
         Furthermore, it's only guaranteed to be unique within a
         \Rclass{TranscriptDb} object.
   \item \Rcode{exon\_name}: The original exon name as provided by the
-        annotation resource (e.g. UCSC, Ensembl, or GFF file) and stored
+        annotation resource (e.g., UCSC, Ensembl, or GFF file) and stored
         in the \Rclass{TranscriptDb} object when it was created.
         Set to \Rcode{NA} if no exon name was provided.
   \item \Rcode{exon\_rank}: The rank of the exon in the transcript.
   \item \Rcode{start\_SSid}, \Rcode{end\_SSid}: The \textit{Splicing Site
         ids} corresponding to the \textit{start} and \textit{end} coordinates
         of the exon. (Please be cautious to not misinterpret the meaning
-        of \textit{start} and \textit{end} here. See IMPORTANT NOTE below.)
+        of \textit{start} and \textit{end} here.)
         Those ids were assigned by the \Rfunction{SplicingGraphs} constructor.
 \end{itemize}
 
@@ -428,7 +430,7 @@ The transcript-level metadata columns are:
         in the \Rclass{TranscriptDb} object when it was created.
   \item \Rcode{txpath}: A named list-like object with one list element
         per transcript in the gene. Each list element is an integer vector
-        that describes the \textit{path} of the transcript i.e. the
+        that describes the \textit{path} of the transcript, i.e., the
         \textit{Splicing Site ids} that it goes thru.
 \end{itemize}
 
@@ -444,7 +446,7 @@ A more convenient way to extract this information is to use the
 txpath(sg[["104252"]])
 @
 
-Note that the list elements of the \Rcode{txpath} metadata column
+The list elements of the \Rcode{txpath} metadata column
 always consist of an even number of \textit{Splicing Site ids} in
 ascending order.
 
@@ -455,7 +457,7 @@ can be plotted with \Rfunction{plotTranscripts}:
 plotTranscripts(sg[["107328"]])
 @
 
-The resulting plot is shown on figure \ref{img:107328-transcripts}.
+The resulting plot is shown in figure~\ref{img:107328-transcripts}.
 
 <<plotTranscripts_sg_107328_as_pdf,echo=FALSE,results=hide>>=
 pdf("107328-transcripts.pdf", width=6, height=3)
@@ -480,7 +482,7 @@ ex_by_tx <- unlist(sg)
 head(names(ex_by_tx))
 @
 
-Note that, because each element in the object represents a transcript
+Because each element in the object represents a transcript
 (and not a gene), the names are not unique! This means that trying to
 subset the object by name (e.g. with \Rcode{ex\_by\_tx["107328"]}
 or \Rcode{ex\_by\_tx[["107328"]]}) is probably a bad idea because this
@@ -541,7 +543,7 @@ The \Rclass{DataFrame} object returned by \Rfunction{sgedges} has the
 following columns:
 \begin{itemize}
   \item \Rcode{from}, \Rcode{to}: The 2 nodes connected by the edge.
-  \item \Rcode{ex\_or\_in}: The type of the edge i.e. exon, intron, or
+  \item \Rcode{ex\_or\_in}: The type of the edge, i.e., exon, intron, or
         no type if it's an artificial edge.
   \item \Rcode{tx\_id}: The ids of the transcripts that support the edge.
 \end{itemize}
@@ -553,7 +555,7 @@ with \Rfunction{sgedgesByGene}:
 edges_by_gene <- sgedgesByGene(sg)
 @
 
-In that case they are returned in a \Rclass{GRangesList} object where they
+In this case the edges are returned in a \Rclass{GRangesList} object where they
 are grouped by gene. \Rcode{edges\_by\_gene} has the length and names of
 \Rcode{sg}, that is, the names on it are the gene ids and are guaranteed
 to be unique. Let's look at the edges for gene 107328:
@@ -573,7 +575,7 @@ The edge-level metadata columns are the following:
         by \Rfunction{sgedges}.
 \end{itemize}
 
-Note that the artificial edges (i.e. edges starting from the root
+The artificial edges (i.e., edges starting from the root
 node (\Rcode{R}) or ending at the leaf node (\Rcode{L})) are omitted!
 
 Finally, to plot a given splicing graph:
@@ -583,7 +585,7 @@ plot(sgraph(sg["107328"]))
 plot(sgraph(sg["107328"], tx_id.as.edge.label=TRUE))
 @
 
-The resulting plots are shown on figure \ref{img:107328-sgraph}.
+The resulting plots are shown in figure~\ref{img:107328-sgraph}.
 
 <<plot_sg_107328_as_pdf,echo=FALSE,results=hide>>=
 pdf("107328-sgraph.pdf", width=3, height=5)
@@ -613,15 +615,15 @@ dev.off()
 \subsection{Some definitions}
 
 The definition of a bubble provided in Sammeth's paper \cite{Sammeth:2010}
-is quite obfuscated. Here we try to give a simpler one. For that purpose,
-we start by introducing the notion of valid path between 2 nodes of a
+is quite obfuscated. Here we try to give a simpler one. 
+We start by introducing the notion of a valid path between 2 nodes of a
 splicing graph: a ``valid path'' between 2 nodes $s$ and $t$ ($s < t$ )
 of a splicing graph is a path followed by at least 1 transcript (see the
 \Rfunction{txpath} function in previous section for how to extract the
 transcript paths).
 
 Let's illustrate this by looking at the splicing graph for gene 329047
-(Entrez ID). The graph is shown on figure \ref{img:329047-sgraph}.
+(Entrez ID). The graph is shown in figure~\ref{img:329047-sgraph}.
 
 <<plot_sg_329047_as_pdf,echo=FALSE,results=hide>>=
 pdf("329047-sgraph-labelled.pdf", width=5, height=5)
@@ -651,17 +653,17 @@ Now the definition of a bubble: there is a ``bubble'' between 2 nodes $s$
 and $t$ ($s < t$ ) of a splicing graph if (a) there are at least 2 distinct
 valid paths between $s$ and $t$, and (b) no other nodes than $s$ and $t$
 are shared by all the valid paths between them.
-Nodes $s$ and $t$ are said to be the ``source'' and``sink'' of the bubble.
+Nodes $s$ and $t$ are said to be the ``source'' and ``sink'' of the bubble.
 The number of distinct valid paths between $s$ and $t$ is the ``dimension''
 of the bubble.
 
 For example, there is a bubble between nodes \Rcode{2} and \Rcode{5} of
-gene 329047 (see figure \ref{img:329047-sgraph}) because the 2 valid paths
+gene 329047 (see figure~\ref{img:329047-sgraph}) because the 2 valid paths
 between them don't share other nodes. The dimension of this bubble is 2.
 However, there is no bubble between nodes \Rcode{2} and \Rcode{9} because
 the 3 valid paths between them also share nodes \Rcode{5} and \Rcode{6}.
 
-Finally, the set of all valid paths that form a bubble describes
+The set of all valid paths that form a bubble describes
 a ``complete alternative splicing event'' (a.k.a. ``complete AS event'',
 or simply ``complete event''). The individual valid paths that form
 the bubble are sometimes called the ``variants'' of the bubble or event.
@@ -671,7 +673,7 @@ the bubble are sometimes called the ``variants'' of the bubble or event.
 Like with the \Rfunction{sgedges} and \Rfunction{sgnodes} functions,
 the bubbles can only be computed for one gene (or graph) at a time.
 Let's compute the bubbles for gene 107328 (Entrez ID) (represented on
-figure \ref{img:107328-sgraph}):
+figure~\ref{img:107328-sgraph}):
 
 <<bubbles_sg_107328>>=
 bubbles(sg["107328"])
@@ -691,7 +693,7 @@ per bubble in the graph and the following columns:
         subsection.
 \end{itemize}
 
-Note that bubbles can be nested i.e. contain (or be contained in) other
+Bubbles can be nested, i.e., contain (or be contained in) other
 bubbles of smaller (or higher) dimensions. For example, in gene 107328,
 the bubble between nodes \Rcode{4} and \Rcode{9} (3rd bubble returned
 by \Rfunction{bubbles}) is of dimension 3 and contains the smaller bubble
@@ -708,7 +710,7 @@ Let's illustrate this by looking at how the AS code for the 2nd bubble
 in gene 107328 is obtained. In 3 steps:
 \begin{enumerate}
   \item The paths reported for this bubble are \Rcode{\{\}} and
-        \Rcode{\{5,6\}}. All the nodes involved in those paths are
+        \Rcode{\{5,6\}}. All the nodes involved in these paths are
         renumbered starting at \Rcode{1} so nodes \Rcode{5} and \Rcode{6}
         become \Rcode{1} and \Rcode{2}, respectively.
   \item Then, for each path, a string is generated by putting together
@@ -721,8 +723,8 @@ in gene 107328 is obtained. In 3 steps:
         by commas (\Rcode{,}). This gives the final code: \Rcode{0,1-2\^}.
 \end{enumerate}
 
-The verbose descriptions of the AS codes are obtained by looking them up
-thru the \Rcode{ASCODE2DESC} predefined object. \Rcode{ASCODE2DESC} is a
+Verbose descriptions of the AS codes are obtained by looking them up
+through the \Rcode{ASCODE2DESC} predefined object. \Rcode{ASCODE2DESC} is a
 named character vector that contains the verbose descriptions for the AS
 codes of the 50 most frequent patterns of internal complete events found
 in Human as reported in Table $1$ of Sammeth's paper \cite{Sammeth:2010}.
@@ -732,12 +734,12 @@ codes <- bubbles(sg["107328"])$AScode
 data.frame(AScode=codes, description=ASCODE2DESC[codes])
 @
 
-Note that \Rcode{ASCODE2DESC} only contains the 50 code descriptions
+\Rcode{ASCODE2DESC} only contains the 50 code descriptions
 reported in Table $1$ of Sammeth's paper \cite{Sammeth:2010}. Therefore,
-looking up codes thru \Rcode{ASCODE2DESC} will inevitably return an
+looking up codes through \Rcode{ASCODE2DESC} will inevitably return an
 \Rcode{NA} for some codes. For example, even simple codes like
-\Rcode{0,1[2\^} or \Rcode{0,1-2\^{}3-4]} (which mean \Rcode{"skip the
-first exon"} or \Rcode{"skip the last 2 exons"}, respectively) are not
+\Rcode{0,1[2\^} or \Rcode{0,1-2\^{}3-4]} (which mean "skip the
+first exon" or "skip the last 2 exons", respectively) are not
 in Sammeth's table, because, as its title indicates, only \textbf{internal}
 complete events are reported in that table (a complete event, or bubble,
 being considered ``internal'' when its source and sink nodes are not
@@ -749,8 +751,8 @@ that seem to correspond to complete events that are not internal. For
 example, the 16th AS code in the table is \Rcode{1*2\^{},3*4\^} and
 its description is \Rcode{"2 alternative first exons"}, which indicates
 that the event is internal. This raises at least 2 questions: why is it
-in the table? and why the code contains \Rcode{*} instead of \Rcode{[}?
-A 3rd question could be: but why exclude complete events that are not
+in the table? and why does the code contain \Rcode{*} instead of \Rcode{[}?
+A third question could be: why exclude complete events that are not
 internal in the first place?}
 
 \subsection{Tabulating all the AS codes for Mouse chromosome 19}
@@ -782,8 +784,8 @@ on Mouse chromosome 19, the most frequent one is named ``skip 1 exon''.
 At this point it should be mentioned that not all splicing
 events have names since there are a variety of different events.
 
-Another interesting information which we can gain from the splicing
-graph is how many complete events does each individual gene have.
+Another interesting fact we can gain from the splicing
+graph is the number of complete events each gene has.
 To answer this we have to count the number of bubbles within
 each gene.
 
@@ -816,7 +818,7 @@ head(sort(nb_unique_bubbles_per_gene, decreasing=TRUE))
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Counting reads}
 
-Finally, in this section, we illustrate how RNA-seq reads can be assigned
+In this section, we illustrate how RNA-seq reads can be assigned
 to the exonic and intronic edges of a \Rclass{SplicingGraphs} object, and
 how these assignments can be summarized in a table of counts.
 The reads we're going to assign are stored as BAM files available in the
@@ -834,7 +836,7 @@ bam_files <- getBamFileList()
 names(bam_files)  # the names of the samples
 @
 
-Another important information about RNA-seq reads is whether they are
+Another important question about RNA-seq reads is whether they are
 single- or paired-end. This can be checked with the \Rfunction{quickCountBam}
 utility from the \Rpackage{Rsamtools} package:
 
@@ -843,7 +845,7 @@ library(Rsamtools)
 quickCountBam(bam_files[1], mainGroupsOnly=TRUE)
 @
 
-Doing this for the 6 BAM files would confirm that all the reads in the
+Doing this for the 6 BAM files confirms that all the reads in the
 files are single-end. This means that they should be loaded with the
 \Rfunction{readGappedAlignments} function from the \Rpackage{GenomicRanges}
 package. As a quick example, we load the reads located on the first 3.2
@@ -857,7 +859,7 @@ head(gal)
 @
 
 The result is a \Rclass{GappedAlignments} object with 1 element per BAM
-record. Note that, although paired-end reads can also be loaded with
+record. Although paired-end reads can also be loaded with
 this function, they should preferably be loaded with the
 \Rfunction{readGappedAlignmentPairs} function (also from the
 \Rpackage{GenomicRanges} package): this will actually pair
@@ -868,9 +870,9 @@ object. Otherwise they won't be paired and will be returned in a
 \subsection{Assigning reads to the edges of a \Rclass{SplicingGraphs} object}
 
 We can use the \Rcode{assignReads} function to assign reads to the
-the exonic and intronic edges of \Rcode{sg}. Note that the same read
+the exonic and intronic edges of \Rcode{sg}. The same read
 can be assigned to more than one exonic or intronic edge. For example,
-a junction read with 1 gap (i.e. 1 \Rcode{N} in its CIGAR) can be assigned
+a junction read with 1 gap (i.e., 1 \Rcode{N} in its CIGAR) can be assigned
 to an intron and its 2 flanking exons, and this can happen for one or more
 transcripts, from the same gene or from different genes.
 
@@ -912,13 +914,13 @@ sg_assignments <- mcols(unlist(edges_by_gene))[ , -(2:5)]
 colnames(sg_assignments)
 @
 
-There is 1 \textit{hits} column per sample. Each of them is a
+There is 1 \textit{hits} column per sample. Each hits column is a
 \Rclass{CharacterList} object that contains the reads from that
 sample that were assigned to the individual edges.
 
 \subsection{Counting and summarizing the assigned reads}
 
-Finally we use \Rfunction{countReads} to count the number of reads assigned
+We use \Rfunction{countReads} to count the number of reads assigned
 to each (non-artificial) edge in \Rcode{sg} for each sample:
 
 <<countReads_sg>>=
