More detailed error message when the reads passed to assignReads() have duplicated names.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75281 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/TODO
+++ b/TODO
@@ -8,10 +8,18 @@ o Complete man pages (get rid of all TODO from them).
 
 o Add other counting modes to countReads(), controlled via an additional
   argument. For example:
+
     - Nb of unique reads per edge (the current mode, should remain the
       default).
+
     - Nb of unique reads per edge in the simplified graph (i.e. graph
       obtained after removing uninformative nodes).
+
     - Nb of unique reads per transcript.
+
+    - Nb of "unambiguous compatible hits" per transcript. Currently done
+      by hand in man page for txweight(). Could be done in a simpler way
+      by looking at the reads already assigned to the SplicingGraphs.
+
     - Nb of unique reads per gene.
 
